# Gex64Decomp

./: .gitignore  CODDOG_CLUSTERS.md  README.md  diffcheck.py  genobjdiff.py  gexenterthegecko.yaml  hasm.source.txt  libkmc.source.txt  log.txt  makefile  mips1.source.txt  mips3.source.txt  objdiff.overrides.txt  requirements.txt  symbol_addrs.txt
.github/workflows/: DiffCI.yml  LabelTroubleMatching.yml  ReportCI.yml  ReportTestCI  ReportTestCI.yml
include/: CAMERA.h  COLLIDE.h  INSTANCE.h  LIST.h  MATRIX.h  OBTABLE.h  SCRIPT.h  SIGNAL.h  SPLINE.h  _4a780.h  common.h  macro.inc
include/audio/: initfx.h  libmus_data.h  synthInternals.h
include/level/: AZTEC.h  CIRCUIT.h  COMMON.h  FINAL.h  (+15 more)
src/: 103F0.c  12D70.c  13920.c  14AC0.c  161C0.c  19BD0.c  1A6A0.c  1BA60.c  1F5F0.c  2BA70.c  2C440.c  2D6E0.c  2F310.c  30630.c  30E70.c  32D70.c  33230.c  345E0.c  360E0.c  368B0.c  38670.c  3AF50.c  3B0E0.c  3BAA0.c  3EAA0.c  3FB20.c  405D0.c  42BD0.c  45E00.c  46EC0.c  4FC20.c  52EE0.c  5CE90.c  CAMERA.c  COLLIDE_A.c  COLLIDE_B.c  COLLIDE_C.c  COLLIDE_D.c  COLLIDE_E.c  COLLIDE_F.c  (+63 more)
src/Findings/chat1 - PS1/: AUDIO_GEOMETRY_FORMATS.txt  BIGFILE_ANALYSIS.txt  BIGFILE_MANIFEST.txt  BIGFILE_MANIFEST_v2.txt  CMakeLists.txt  Chat1.docx  LEV_INDEX_FORMAT.txt  WORLD_BINARY_FORMAT.txt  bigfile.c  bigfile_decode.py  camera.c  extract_collision_vertices.py  gex2_globals.h  gex2_types.h  object.c  script_exec.c  script_handlers.txt  symbol_candidates.txt  test_bigfile_hash.c  utils.c
tests/: test_invariant_AZTEC.c
tools/: coddog_scan.py  ef.sh  genctxheader.py  m2ctx.py  nf.sh
(+268 files in other folders)
